[package]
name = "tokio-netstring"
description = "Tokio Framed Netstring Codec"
version = "0.1.3"
edition = "2018"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/sebsch/tokio-framed-netstring"
readme = "README.md"


[dependencies]
tokio = {version="1.10.0", features=["full"]}
tokio-util = {version= "0.6.7", features=["codec"]}
futures = "0.3.16"
bytes = "1.0.1"
log = "0.4.19"


[lib]
name = "tokio_netstring"
path = "src/lib.rs"
